Update Sea Ice Edge download

--- a/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
@@ -1245,7 +1245,8 @@
     "<figcaption>Difference between sea-ice area and sea-ice extent (inspired from <a href=\"https://www.ghrsst.org/wp-content/uploads/2021/04/SSTDefinitionsDiscussion.pdf\" target=\"_blank\">Burgard (2020)</a>)</figcaption>\n",
     "<br>\n",
     "These calculations are provide as daily average, and as monthly average. For each pole, the Sea-Ice Index provides then four files:\n",
-    "* monthly area\n",
+    "\n",
+    "* Monthly area\n",
     "* monthly extend\n",
     "* daily area\n",
     "* daily extend\n",
@@ -1412,6 +1413,195 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Global Sea Ice Edge :\n",
+    "\n",
+    "The Sea Ice Edge is a Near Real Time product, providing a daily basic classification of the ocean surface into three classes:\n",
+    "\n",
+    "* Open Water (Sea-Ice Concentration < 30%)\n",
+    "* Open Ice (30% < Sea-Ice Concentration < 70%)\n",
+    "* Close Ice (Sea-Ice Concentration > 70%)\n",
+    "\n",
+    "Althought apparently similar to Sea Ice Concentration products, it is retrieved with different methods, include active microwave data aside the passive microwaves (PMW), and is based on more frequencies of PMW.\n",
+    "\n",
+    "Let's then start by creating a specific folder to hold the Sea Ice Edge products, starting by the northern hemisphere."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hemisphere = 'nh'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_edge\", hemisphere)\n",
+    "os.makedirs(download_dir, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sea Ice Edge products exist for each hemisphere.\n",
+    "\n",
+    "Let's look at the Northern hemisphere Arctic Sea Ice Edge"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set the download path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ice_edge_nh_polstere-100_multi_20250417\n"
+     ]
+    }
+   ],
+   "source": [
+    "year = \"2025\"\n",
+    "month = '04'\n",
+    "day = '17'\n",
+    "path = '/archive/ice/edge/' + year + '/' + month\n",
+    "file_pattern = 'ice_edge_'+ hemisphere +'_polstere-100_multi_' + year + month + day\n",
+    "\n",
+    "print(file_pattern)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'221 Goodbye.'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# connect ftp and download file\n",
+    "ftp = ftplib.FTP(\"osisaf.met.no\") \n",
+    "ftp.login(username, password)\n",
+    "ftp.cwd(path)\n",
+    "files = ftp.nlst()\n",
+    "for file in files:\n",
+    "    if file_pattern in file:\n",
+    "        filename = file\n",
+    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'sea_ice_edge', hemisphere, filename), 'wb').write)\n",
+    "ftp.quit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's now do the same for the Southern hemisphere Sea Ice Edge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hemisphere = 'sh'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_edge\", hemisphere)\n",
+    "os.makedirs(download_dir, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set the download path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ice_edge_sh_polstere-100_multi_20250417\n"
+     ]
+    }
+   ],
+   "source": [
+    "year = \"2025\"\n",
+    "month = '04'\n",
+    "day = '17'\n",
+    "path = '/archive/ice/edge/' + year + '/' + month\n",
+    "file_pattern = 'ice_edge_'+ hemisphere +'_polstere-100_multi_' + year + month + day\n",
+    "\n",
+    "print(file_pattern)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'221 Goodbye.'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# connect ftp and download file\n",
+    "ftp = ftplib.FTP(\"osisaf.met.no\") \n",
+    "ftp.login(username, password)\n",
+    "ftp.cwd(path)\n",
+    "files = ftp.nlst()\n",
+    "for file in files:\n",
+    "    if file_pattern in file:\n",
+    "        filename = file\n",
+    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'sea_ice_edge', hemisphere, filename), 'wb').write)\n",
+    "ftp.quit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
@@ -1569,169 +1759,6 @@
     "    if file_pattern in file:\n",
     "        filename = file\n",
     "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'sea_ice_type', 'sh', filename), 'wb').write)\n",
-    "ftp.quit()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "### Global Sea Ice Edge :\n",
-    "\n",
-    "Let's start by creating a specific folder to hold the Sea Ice Edge products"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_edge\")\n",
-    "os.makedirs(download_dir, exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The best period to explore Sea Ice Type is during winter. \\\n",
-    "For nothern hemisphere, the best period is between october and may. \\\n",
-    "For southern hemisphere, the best period is between ??"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Sea Ice Edge products exist for each hemisphere.\n",
-    "\n",
-    "Let's look at the Northern hemisphere Arctic Sea Ice Edge"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_edge\", \"nh\")\n",
-    "os.makedirs(download_dir, exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Set the download path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "year = \"2023\"\n",
-    "month = '07'\n",
-    "day = '23'\n",
-    "path = '/archive/ice/edge/' + year + '/' + month\n",
-    "file_pattern = 'ice_edge_nh_polstere-100_multi_' + year + month + day"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'221 Goodbye.'"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# connect ftp and download file\n",
-    "ftp = ftplib.FTP(\"osisaf.met.no\") \n",
-    "ftp.login(username, password)\n",
-    "ftp.cwd(path)\n",
-    "files = ftp.nlst()\n",
-    "for file in files:\n",
-    "    if file_pattern in file:\n",
-    "        filename = file\n",
-    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'sea_ice_edge', 'nh', filename), 'wb').write)\n",
-    "ftp.quit()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's look at the Southern hemisphere Antarctic Sea Ice Edge"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_edge\", \"sh\")\n",
-    "os.makedirs(download_dir, exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Set the download path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "year = \"2023\"\n",
-    "month = '06'\n",
-    "path = '/archive/ice/edge/' + year + '/' + month\n",
-    "file_pattern = 'ice_edge_sh_polstere-100_multi_'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'221 Goodbye.'"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# connect ftp and download file\n",
-    "ftp = ftplib.FTP(\"osisaf.met.no\") \n",
-    "ftp.login(username, password)\n",
-    "ftp.cwd(path)\n",
-    "files = ftp.nlst()\n",
-    "for file in files:\n",
-    "    if file_pattern in file:\n",
-    "        filename = file\n",
-    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'sea_ice_edge', 'sh', filename), 'wb').write)\n",
     "ftp.quit()"
    ]
   },
