minor introduction update

--- a/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
@@ -95,7 +95,7 @@
     "\n",
     "### Outline\n",
     "\n",
-    "Data from OSI SAF are available through multiple sources. Here we will guide you through FTP access to OSI SAF Sea Ice Data.\n",
+    "Data from OSI SAF are available through multiple sources. Here we will guide you through FTP access to OSI SAF Sea Ice Data. This notebook is design to download data that will be used in the plotting examples (section 1.3). We are here providing few information to understand the differences between the products we are downloading.\n",
     "\n",
     "<div class=\"alert alert-info\" role=\"alert\">\n",
     "\n",
