Sea Ice Type Introduction

--- a/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
@@ -1451,15 +1451,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sea Ice Edge products exist for each hemisphere.\n",
-    "\n",
-    "Let's look at the Northern hemisphere Arctic Sea Ice Edge"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Set the download path"
    ]
   },
@@ -1608,7 +1599,17 @@
    "source": [
     "### Global Sea Ice Type :\n",
     "\n",
-    "Let's start by creating a specific folder to hold the Sea Ice Type products"
+    "The Sea Ice Type is a Near Real Time product, providing a daily basic classification of the Sea Ice Surface depending if it has survived at least one melting season. It then classify the ocean into:\n",
+    "\n",
+    "* Open Water (Sea-Ice Concentration < 30%. Adopted from Sea-Ice Edge)\n",
+    "* First Year Ice (Ice Concentration >30%)\n",
+    "* Multi-Year Ice (Ice Concentration >30%)\n",
+    "\n",
+    "In the summer period the ice type classification becomes unreliable and all ice is classified as ambiguous. This is mainly due to melting at the ice surface so that the microwave signature of the surface loses its ability to differ between first-year ice and multiyear ice. **The ice is set to ambiguous in the defined summer periods per hemisphere**:\n",
+    "* Northern Hemisphere: May – September\n",
+    "* Southern Hemisphere: September – February\n",
+    "\n",
+    "Let's then start by creating a specific folder to hold the Sea Ice Type products, starting by the northern hemisphere.\n"
    ]
   },
   {
