Sea Ice Type code update

--- a/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
@@ -1614,39 +1614,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_type\")\n",
-    "os.makedirs(download_dir, exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The best period to explore Sea Ice Type is during winter. \\\n",
-    "For nothern hemisphere, the best period is between october and may. \\\n",
-    "For southern hemisphere, the best period is between ??"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Sea Ice Type products exist for each hemisphere.\n",
-    "\n",
-    "Let's look at the Northern hemisphere Arctic Sea Ice Type"
+    "hemisphere = 'nh'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_type\", \"nh\")\n",
+    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_type\", hemisphere)\n",
     "os.makedirs(download_dir, exist_ok=True)"
    ]
   },
@@ -1654,19 +1635,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Set the download path"
+    "We will then download a file during the northern hemisphere winter. Let's choose Christmas."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ice_type_nh_polstere-100_multi_20241225\n"
+     ]
+    }
+   ],
    "source": [
-    "year = \"2023\"\n",
-    "month = '01'\n",
+    "year = '2024'\n",
+    "month = '12'\n",
+    "day = '25'\n",
     "path = '/archive/ice/type/' + year + '/' + month\n",
-    "file_pattern = 'ice_type_nh_polstere-100_multi_' + year + month"
+    "file_pattern = 'ice_type_'+hemisphere+'_polstere-100_multi_' + year + month + day\n",
+    "\n",
+    "print(file_pattern)"
    ]
   },
   {
@@ -1694,7 +1686,7 @@
     "for file in files:\n",
     "    if file_pattern in file:\n",
     "        filename = file\n",
-    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'sea_ice_type', 'nh', filename), 'wb').write)\n",
+    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'sea_ice_type', hemisphere, filename), 'wb').write)\n",
     "ftp.quit()"
    ]
   },
@@ -1702,7 +1694,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's look at the Southern hemisphere Antarctic Sea Ice Type"
+    "Let's do the same for the southern hemisphere."
    ]
   },
   {
@@ -1711,15 +1703,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_type\", \"sh\")\n",
-    "os.makedirs(download_dir, exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Set the download path"
+    "hemisphere = 'sh'"
    ]
   },
   {
@@ -1728,10 +1712,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year = \"2023\"\n",
-    "month = '06'\n",
-    "path = '/archive/ice/type/' + year + '/' + month\n",
-    "file_pattern = 'ice_type_sh_polstere-100_multi_'"
+    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_type\", hemisphere)\n",
+    "os.makedirs(download_dir, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll now select a date and download data for a day during southern hemisphere winter. Let's say on the June solstice."
    ]
   },
   {
@@ -1740,12 +1729,35 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ice_type_sh_polstere-100_multi_20250621\n"
+     ]
+    }
+   ],
+   "source": [
+    "year = '2025'\n",
+    "month = '06'\n",
+    "day = '21'\n",
+    "path = '/archive/ice/type/' + year + '/' + month\n",
+    "file_pattern = 'ice_type_'+hemisphere+'_polstere-100_multi_' + year + month + day\n",
+    "\n",
+    "print(file_pattern)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
        "'221 Goodbye.'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1759,7 +1771,7 @@
     "for file in files:\n",
     "    if file_pattern in file:\n",
     "        filename = file\n",
-    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'sea_ice_type', 'sh', filename), 'wb').write)\n",
+    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'sea_ice_type', hemisphere, filename), 'wb').write)\n",
     "ftp.quit()"
    ]
   },
