Sea Ice Emissivity update

--- a/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
@@ -1783,7 +1783,94 @@
    "source": [
     "### Global Sea Ice Emissivity :\n",
     "\n",
-    "Let's start by creating a specific folder to hold the Sea Ice Emissivity products"
+    "This product is a grided daily retrieval of the emissivity of the Sea Ice at both pole, in the near 50GHz microwaves. It is currently using SSMIS, which as become unstable. Our team is working to migrate this product to use AMSR2 product. The last months of products present numerous gap due to the sensor end of life. \n",
+    "\n",
+    "Let's start by creating a specific folder to hold the Sea Ice Emissivity products for the northern hemisphere."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hemisphere = 'nh'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_emissivity\", hemisphere)\n",
+    "os.makedirs(download_dir, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set the download path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ice_emis_nh_stere-100_ssmis_20250922\n"
+     ]
+    }
+   ],
+   "source": [
+    "year = \"2025\"\n",
+    "month = '09'\n",
+    "day = '22'\n",
+    "path = '/archive/ice/emis/' + year + '/' + month\n",
+    "file_pattern = 'ice_emis_'+hemisphere+'_stere-100_ssmis_' + year + month + day\n",
+    "\n",
+    "print(file_pattern)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'221 Goodbye.'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# connect ftp and download file\n",
+    "ftp = ftplib.FTP(\"osisaf.met.no\") \n",
+    "ftp.login(username, password)\n",
+    "ftp.cwd(path)\n",
+    "files = ftp.nlst()\n",
+    "for file in files:\n",
+    "    if file_pattern in file:\n",
+    "        filename = file\n",
+    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'sea_ice_emissivity', hemisphere, filename), 'wb').write)\n",
+    "ftp.quit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's do the same thing for the southern hemisphere."
    ]
   },
   {
@@ -1792,17 +1879,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_emissivity\")\n",
-    "os.makedirs(download_dir, exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Sea Ice Emmissivity products exist for each hemisphere.\n",
-    "\n",
-    "Let's look at the Northern hemisphere Arctic Sea Ice Emmissivity"
+    "hemisphere = 'sh'"
    ]
   },
   {
@@ -1811,7 +1888,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_emissivity\", \"nh\")\n",
+    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_emissivity\", hemisphere)\n",
     "os.makedirs(download_dir, exist_ok=True)"
    ]
   },
@@ -1826,12 +1903,23 @@
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ice_emis_sh_stere-100_ssmis_20250922\n"
+     ]
+    }
+   ],
    "source": [
-    "year = \"2023\"\n",
-    "month = '01'\n",
+    "year = \"2025\"\n",
+    "month = '09'\n",
+    "day = '22'\n",
     "path = '/archive/ice/emis/' + year + '/' + month\n",
-    "file_pattern = 'ice_emis_nh_stere-100_ssmis_'"
+    "file_pattern = 'ice_emis_'+hemisphere+'_stere-100_ssmis_' + year + month + day\n",
+    "\n",
+    "print(file_pattern)"
    ]
   },
   {
@@ -1859,72 +1947,7 @@
     "for file in files:\n",
     "    if file_pattern in file:\n",
     "        filename = file\n",
-    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'sea_ice_emissivity', 'nh', filename), 'wb').write)\n",
-    "ftp.quit()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's look at the Southern hemisphere Antarctic Sea Ice Emissivity"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_emissivity\", \"sh\")\n",
-    "os.makedirs(download_dir, exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Set the download path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "year = \"2023\"\n",
-    "month = '06'\n",
-    "path = '/archive/ice/emis/' + year + '/' + month\n",
-    "file_pattern = 'ice_emis_sh_stere-100_ssmis_'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'221 Goodbye.'"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# connect ftp and download file\n",
-    "ftp = ftplib.FTP(\"osisaf.met.no\") \n",
-    "ftp.login(username, password)\n",
-    "ftp.cwd(path)\n",
-    "files = ftp.nlst()\n",
-    "for file in files:\n",
-    "    if file_pattern in file:\n",
-    "        filename = file\n",
-    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'sea_ice_emissivity', 'sh', filename), 'wb').write)\n",
+    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'sea_ice_emissivity', hemisphere, filename), 'wb').write)\n",
     "ftp.quit()"
    ]
   },
