Sea Ice Drift update

--- a/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
@@ -1958,16 +1958,27 @@
    "source": [
     "### Global Low Resolution Sea Ice Drift :\n",
     "\n",
+    "This product is a gridded low resolution drift vector obtained from satellite data processing. Ice motion over a time span of 48h, estimated by a cross-correlation method, are given in a vector. Several single sensor products are available (currently operating : GCOM-W/AMSR2, Metop-B/ASCAT, Metop-C/ASCAT and, when data are available, DMSP-F18/SSMIS). We will hereunder concentrate on the multisensor product, wich use the AMSR2 as primary data source and the two ASCAT as secondary since july 2025.\n",
+    "\n",
     "Let's start by creating a specific folder to hold the Sea Ice Drift low resolution products"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_drift_lr\")\n",
+    "hemisphere = 'nh'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "download_dir = os.path.join(os.getcwd(), \"products\", \"SI_drift_lr\", hemisphere)\n",
     "os.makedirs(download_dir, exist_ok=True)"
    ]
   },
@@ -1981,32 +1992,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_drift_lr\", \"nh\")\n",
-    "os.makedirs(download_dir, exist_ok=True)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Set the download path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "year = \"2023\"\n",
-    "month = '07'\n",
-    "path = '/archive/ice/drift_lr/merged/' + year + '/' + month\n",
-    "file_pattern = 'ice_drift_nh_polstere-625_'"
    ]
   },
   {
@@ -2015,12 +2004,35 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ice_drift_nh_polstere-625_multi-oi_20251104\n"
+     ]
+    }
+   ],
+   "source": [
+    "year = \"2025\"\n",
+    "month = '11'\n",
+    "day = '04'\n",
+    "path = '/archive/ice/drift_lr/merged/' + year + '/' + month\n",
+    "file_pattern = 'ice_drift_'+hemisphere+'_polstere-625_multi-oi_' + year + month + day\n",
+    "\n",
+    "print(file_pattern)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
        "'221 Goodbye.'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2034,111 +2046,33 @@
     "for file in files:\n",
     "    if file_pattern in file:\n",
     "        filename = file\n",
-    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'sea_ice_drift_lr', 'nh', filename), 'wb').write)\n",
+    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'SI_drift_lr', hemisphere, filename), 'wb').write)\n",
     "ftp.quit()"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
-    "### Global Sea Ice Concentration (AMSR-2)\n",
-    "Let's start by creating a specific folder to hold the Global Sea Ice Concentration (AMSR-2) products"
+    "An finally , let's download data from the southern hemisphere:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_conc_AMSR\")\n",
-    "os.makedirs(download_dir, exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Global Sea Ice Concentration (AMSR-2) products exist for each hemisphere.\n",
-    "\n",
-    "Let's look at the Northern hemisphere"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_conc_AMSR\", \"nh\")\n",
-    "os.makedirs(download_dir, exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Set the download path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "year = \"2023\"\n",
-    "month = '06'\n",
-    "path = '/archive/ice/conc_amsr/' + year + '/' + month\n",
-    "file_pattern = 'ice_conc_nh_polstere-100_amsr2_'"
+    "hemisphere = 'sh'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 47,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'221 Goodbye.'"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# connect ftp and download file\n",
-    "ftp = ftplib.FTP(\"osisaf.met.no\") \n",
-    "ftp.login(username, password)\n",
-    "ftp.cwd(path)\n",
-    "files = ftp.nlst()\n",
-    "for file in files:\n",
-    "    if file_pattern in file:\n",
-    "        filename = file\n",
-    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'sea_ice_conc_AMSR', 'nh', filename), 'wb').write)\n",
-    "ftp.quit()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's look at the Southern hemisphere "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_conc_AMSR\", \"sh\")\n",
+    "download_dir = os.path.join(os.getcwd(), \"products\", \"SI_drift_lr\", hemisphere)\n",
     "os.makedirs(download_dir, exist_ok=True)"
    ]
   },
@@ -2151,19 +2085,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ice_drift_sh_polstere-625_multi-oi_20251104\n"
+     ]
+    }
+   ],
    "source": [
-    "year = \"2023\"\n",
-    "month = '06'\n",
-    "path = '/archive/ice/conc_amsr/' + year + '/' + month\n",
-    "file_pattern = 'ice_conc_sh_polstere-100_amsr2_'"
+    "year = \"2025\"\n",
+    "month = '11'\n",
+    "day = '04'\n",
+    "path = '/archive/ice/drift_lr/merged/' + year + '/' + month\n",
+    "file_pattern = 'ice_drift_'+hemisphere+'_polstere-625_multi-oi_' + year + month + day\n",
+    "\n",
+    "print(file_pattern)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2172,7 +2117,7 @@
        "'221 Goodbye.'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2186,7 +2131,7 @@
     "for file in files:\n",
     "    if file_pattern in file:\n",
     "        filename = file\n",
-    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'sea_ice_conc_AMSR', 'sh', filename), 'wb').write)\n",
+    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'SI_drift_lr', hemisphere, filename), 'wb').write)\n",
     "ftp.quit()"
    ]
   },
