adapting to new C3S API

--- a/1_OSI_SAF_sea_ice_introductory/1_1b_OSI_SAF_sea_ice_C3S_data_access.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_1b_OSI_SAF_sea_ice_C3S_data_access.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "<html>\n",
     "  <div style=\"width:100%\">\n",
-    "    <div style=\"float:left\"><a href=\"https://mybinder.org/v2/git/https%3A%2F%2Fgitlab.eumetsat.int%2Feumetlab%2Foceans%2Focean-training%2Fsensors%2Flearn-osi-saf-sea-ice/HEAD?labpath=1_OSI_SAF_sea_ice_introductory%2F1_1_OSI_SAF_sea_ice_FTP_data_access.ipynb\"><img src=\"https://mybinder.org/badge_logo.svg\" alt=\"Open in Binder\"></a></div>\n",
+    "    <div style=\"float:left\"><a href=\"https://mybinder.org/v2/git/https%3A%2F%2Fgitlab.eumetsat.int%2Feumetlab%2Foceans%2Focean-training%2Fsensors%2Flearn-osi-saf-sea-ice/HEAD?labpath=1_OSI_SAF_sea_ice_introductory%2F1_1b_OSI_SAF_sea_ice_C3S_data_access.ipynb\"><img src=\"https://mybinder.org/badge_logo.svg\" alt=\"Open in Binder\"></a></div>\n",
     "    <div style=\"float:left\"><p>&emsp;</p></div>\n",
     "  </div>\n",
     "</html>"
@@ -56,7 +56,7 @@
     "<b>PREREQUISITES </b>\n",
     "    \n",
     "This notebook has the following prerequisites:\n",
-    "- **<a href=\"https://cds.climate.copernicus.eu/user/login?destination=%2F%23!%2Fhome\" target=\"_blank\">A COPERNICUS MARINE SERVICE account</a>** if you are using or plan to use the Copernicus Climate change data.\n",
+    "- **<a href=\"https://cds.climate.copernicus.eu/\" target=\"_blank\">A COPERNICUS CLIMATE CHANGE SERVICE account</a>** if you are using or plan to use the Copernicus Climate change data.\n",
     "\n",
     "There are no prerequisite notebooks for this module.\n",
     "</div>\n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,11 +134,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_conc_interim\", \"nh\")\n",
+    "download_dir = os.path.join(os.getcwd(), \"products\", \"SI_concentration_SSM_ICDR3\", \"nh\")\n",
     "os.makedirs(download_dir, exist_ok=True)"
    ]
   },
@@ -153,18 +153,18 @@
     "\n",
     "</div>\n",
     "\n",
-    "In order to allow us to download data, we need to provide our credentials. We can do this in two ways; either by creating a file called `.cdsapi` in our home directory.\n",
+    "In order to allow us to download data, we need to provide our credentials. We can do this in two ways; either by creating a file called `.cdsapirc` in our home directory.\n",
     "\n",
     "For most computer systems the home directory can be found at the path \\user\\username, /users/username, or /home/username depending on your operating system.\n",
     "\n",
     "In this file we need to add the following information exactly as follows;\n",
     "\n",
     "```\n",
-    "url: https://cds.climate.copernicus.eu/api/v2\n",
-    "key: <UID>:<APIKEY>\n",
+    "url: https://cds.climate.copernicus.eu/api\n",
+    "key: <APIKEY>\n",
     "```\n",
     "\n",
-    "You must replace `<UID>` and `<APIKEY>` with the information provided in your user profile. \n",
+    "You must replace `<APIKEY>` with the information provided in your <a href=\"https://cds.climate.copernicus.eu/how-to-api\">user profile</a>. \n",
     "\n",
     "Make sure to save the file without any kind of extension.\n",
     "\n",
@@ -209,46 +209,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-03-04 11:48:57,469 INFO Welcome to the CDS\n",
-      "2024-03-04 11:48:57,470 INFO Sending request to https://cds.climate.copernicus.eu/api/v2/resources/satellite-sea-ice-concentration\n",
-      "2024-03-04 11:48:57,558 INFO Request is completed\n",
-      "2024-03-04 11:48:57,559 INFO Downloading https://download-0007-clone.copernicus-climate.eu/cache-compute-0007/cache/data5/dataset-satellite-sea-ice-concentration-85d95509-8dcf-43dc-bb1b-454723b14811.zip to /Users/benloveday/Desktop/CMTS_TEST/learn-osi-saf-sea-ice/1_OSI_SAF_sea_ice_introductory/products/sea_ice_conc_interim/nh/download.zip (1.2M)\n",
-      "2024-03-04 11:48:58,000 INFO Download rate 2.7M/s                                                                                                                \n"
+      "2026-01-09 12:09:13,034 INFO [2025-11-11T00:00:00] A new version has been added requiring a change to the download form. Users are advised that CDS API requests will need to be manually updated to accommodate this change.\n",
+      "2026-01-09 12:09:13,035 INFO Request ID is 9f2827fd-9cd6-4663-a901-accda2eb27dd\n",
+      "2026-01-09 12:09:13,107 INFO status has been updated to accepted\n",
+      "2026-01-09 12:09:46,297 INFO status has been updated to successful\n"
      ]
     },
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2e9eef414a8a4b3381d299480275bbfd",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "Result(content_length=1244970,content_type=application/zip,location=https://download-0007-clone.copernicus-climate.eu/cache-compute-0007/cache/data5/dataset-satellite-sea-ice-concentration-85d95509-8dcf-43dc-bb1b-454723b14811.zip)"
+       "fadcef2f596a1109f21b77df888e4ea9.zip:   0%|          | 0.00/1.09M [00:00<?, ?B/s]"
       ]
      },
-     "execution_count": 4,
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'/data/dev_gwen/EO_lab/learn-osi-saf-sea-ice/1_OSI_SAF_sea_ice_introductory/products/SI_concentration_SSM_ICDR3/nh/download.zip'"
+      ]
+     },
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "c.retrieve(\n",
-    "    'satellite-sea-ice-concentration',\n",
-    "    {\n",
-    "        'version': 'v2',\n",
-    "        'variable': 'all',\n",
-    "        'format': 'zip',\n",
-    "        'origin': 'eumetsat_osi_saf',\n",
-    "        'region': 'northern_hemisphere',\n",
-    "        'cdr_type': 'icdr',\n",
-    "        'year': '2023',\n",
-    "        'month': '04',\n",
-    "        'day': '30',\n",
-    "    },\n",
-    "    download_dir + '/download.zip')"
+    "dataset = \"satellite-sea-ice-concentration\"\n",
+    "request = {\n",
+    "    \"variable\": \"all\",\n",
+    "    \"version\": \"3_0\",\n",
+    "    \"sensor\": \"ssmis\",\n",
+    "    \"region\": [\"northern_hemisphere\"],\n",
+    "    \"cdr_type\": [\"icdr\"],\n",
+    "    \"temporal_aggregation\": \"daily\",\n",
+    "    \"year\": [\"2023\"],\n",
+    "    \"month\": [\"04\"],\n",
+    "    \"day\": [\"30\"]\n",
+    "}\n",
+    "\n",
+    "client = cdsapi.Client()\n",
+    "target = download_dir +'/download.zip'\n",
+    "\n",
+    "client.retrieve(dataset, request).download(target)\n"
    ]
   },
   {
@@ -260,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +332,7 @@
   "description": "This Jupyter Notebook shows how to access OSI SAF sea ice data via C3S.",
   "image": "../img/thumbs/1_1b_OSI_SAF_sea_ice_C3S_data_access_thumb.png",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "cmts_learn_osi_saf_sea_ice",
    "language": "python",
    "name": "python3"
   },
@@ -330,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.14"
   },
   "license": "MIT",
   "metadata_schema_version": "2.0.0",
